--- a/ts-react/package.json
+++ b/ts-react/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://patrikmaltacm.github.io/Barber",
   "name": "ts-react",
   "private": true,
   "version": "0.0.0",
@@ -7,10 +8,13 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
+    "gh-pages": "^6.1.1",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
