--- a/ts-react/package.json
+++ b/ts-react/package.json
@@ -15,9 +15,13 @@
   "dependencies": {
     "@googlemaps/react-wrapper": "^1.1.35",
     "gh-pages": "^6.1.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
     "moment": "^2.30.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
